# Tetrapod-Robot

./: .gitignore  .gitmodules  DEMO_FOOTSTEP_PLANNING.md  Doxyfile  LICENSE  README.md
Arduino/: README.md
catkin_ws/: .gitignore  README.md  buildCode.sh
catkin_ws/src/control/joystick_controller/: CMakeLists.txt  package.xml
catkin_ws/src/control/joystick_controller/include/joystick_controller/: joystick_controller.h
catkin_ws/src/control/joystick_controller/launch/: joystick_controller.launch
catkin_ws/src/control/joystick_controller/src/: joystick_controller.cpp  joystick_controller_node.cpp  joystick_node.cpp
catkin_ws/src/control/matlab_msg_gen_ros1/glnxa64/src/convex_mpc_controller/: CMakeLists.txt  Md5checksum.mat  package.xml  packageInfo.mat
catkin_ws/src/control/matlab_msg_gen_ros1/glnxa64/src/convex_mpc_controller/include/convex_mpc_controller/: visibility_control.h
catkin_ws/src/control/matlab_msg_gen_ros1/glnxa64/src/convex_mpc_controller/m/+ros/+msggen/+convex_mpc_controller/: foot_input.m  init_pos.m  inputs.m  pose.m  solveMpcRequest.m  solveMpcResponse.m  states.m
catkin_ws/src/control/matlab_msg_gen_ros1/glnxa64/src/convex_mpc_controller/msg/: foot_input.msg  init_pos.msg  inputs.msg  solveMpcRequest.msg  solveMpcResponse.msg  states.msg
catkin_ws/src/control/matlab_msg_gen_ros1/glnxa64/src/convex_mpc_controller/src/: convex_mpc_controller_foot_input_message.cpp  convex_mpc_controller_init_pos_message.cpp  convex_mpc_controller_inputs_message.cpp  convex_mpc_controller_pose_message.cpp  convex_mpc_controller_solveMpcRequest_message.cpp  convex_mpc_controller_solveMpcResponse_message.cpp  convex_mpc_controller_states_message.cpp
catkin_ws/src/control/modular_gait_controller/: CMakeLists.txt  package.xml
catkin_ws/src/control/modular_gait_controller/include/modular_gait_controller/: gait_controller.h  gaits.h
catkin_ws/src/control/modular_gait_controller/launch/: gait.launch
catkin_ws/src/control/modular_gait_controller/python/: calculate_polynomials.py
catkin_ws/src/control/modular_gait_controller/src/: gait_controller.cpp  gait_controller_node.cpp  gaits.cpp
catkin_ws/src/control/robot_controller/: CMakeLists.txt  package.xml
catkin_ws/src/control/robot_controller/include/robot_controller/: robot_controller.h
catkin_ws/src/control/robot_controller/launch/: gait_test_node.launch  robot_controller.launch
catkin_ws/src/control/robot_controller/src/: gait_test_node.cpp  plot_spline.cpp  robot_controller.cpp  robot_controller_node.cpp
catkin_ws/src/control/single_leg_controller_test/: CMakeLists.txt  package.xml
catkin_ws/src/control/single_leg_controller_test/include/single_leg_controller_test/: single_leg_controller_test.h
catkin_ws/src/control/single_leg_controller_test/launch/: speed_test.launch
catkin_ws/src/control/single_leg_controller_test/src/: single_leg_controller_test.cpp  speed_test_node.cpp
catkin_ws/src/control/single_motor_controller/: CMakeLists.txt  package.xml
catkin_ws/src/control/single_motor_controller/include/single_motor_controller/: single_motor_controller.h
catkin_ws/src/control/single_motor_controller/launch/: control_node.launch  rosserial_python.launch  single_motor_test.launch  step_response_test.launch  velocity_step_response_test.launch
catkin_ws/src/control/single_motor_controller/src/: automatic_setpoint_publisher.cpp  control_node.cpp  rx_node.cpp  single_motor_controller.cpp  step_response_test.cpp  tx_node.cpp  velocity_step_response_test.cpp
catkin_ws/src/control/static_gait_controller/: CMakeLists.txt  package.xml
catkin_ws/src/control/static_gait_controller/include/static_gait_controller/: static_gait_controller.h
catkin_ws/src/control/static_gait_controller/src/: static_gait_controller.cpp  static_gait_node.cpp  static_gait_turning_node.cpp
catkin_ws/src/guidance/footstep_planner/: CMakeLists.txt  package.xml  todo.md
catkin_ws/src/guidance/footstep_planner/include/footstep_planner/: footstep_planner.h  miqp_quadruped.h  miqp_waypoint.h  stepping_stone.h  terrain.h  utils.h
catkin_ws/src/guidance/footstep_planner/python/: write_terrain.py  write_terrain_and_footsteps.py
catkin_ws/src/guidance/footstep_planner/src/: footstep_planner.cpp  footstep_planner_node.cpp  miqp_biped.cpp  miqp_quadruped.cpp  terrain.cpp  utils.cpp  waypoint_planner.cpp
catkin_ws/src/guidance/matlab_msg_gen_ros1/glnxa64/src/collocation_optimization_trajectory_planner/: CMakeLists.txt  Md5checksum.mat  package.xml  packageInfo.mat
catkin_ws/src/guidance/matlab_msg_gen_ros1/glnxa64/src/collocation_optimization_trajectory_planner/include/collocation_optimization_trajectory_planner/: visibility_control.h
catkin_ws/src/guidance/matlab_msg_gen_ros1/glnxa64/src/collocation_optimization_trajectory_planner/msg/: foot_input.msg  inputs.msg  solveMpcRequest.msg  solveMpcResponse.msg
catkin_ws/src/guidance/matlab_msg_gen_ros1/glnxa64/src/collocation_optimization_trajectory_planner/src/: collocation_optimization_trajectory_planner_foot_input_message.cpp  collocation_optimization_trajectory_planner_init_pos_message.cpp  collocation_optimization_trajectory_planner_inputs_message.cpp  collocation_optimization_trajectory_planner_solveMpcRequest_message.cpp  collocation_optimization_trajectory_planner_solveMpcResponse_message.cpp  collocation_optimization_trajectory_planner_states_message.cpp
catkin_ws/src/guidance/support_polytope_base_planner/: CMakeLists.txt  package.xml
catkin_ws/src/guidance/support_polytope_base_planner/include/support_polytope_base_planner/: polytope.h  polytopes.h  support_polytope_base_planner.h
catkin_ws/src/guidance/support_polytope_base_planner/launch/: support_polytyope_base_planner.launch
catkin_ws/src/guidance/support_polytope_base_planner/src/: main.cpp  polytope.cpp  polytopes.cpp  support_polytope_base_planner.cpp
catkin_ws/src/navigation/state_estimator/: CMakeLists.txt
catkin_ws/src/navigation/state_estimator/include/state_estimator/: state_estimator.h
catkin_ws/src/navigation/state_estimator/src/: state_estimator_node.cpp
dependencies/: README.md
(+5196 files in other folders)
