<?xml version="1.0"?>
<package format="2">
  <name>single_leg_controller_test</name>
  <version>0.0.0</version>
  <description>The single_leg_controller_test package</description>

  <maintainer email="omicron@todo.todo">omicron</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <depend>angle_utils</depend>
  <depend>debug_utils</depend>
  <depend>filter_utils</depend>
  <depend>kinematics</depend>

  <depend>eigen</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
